--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "udacity-c2-restapi",
+  "name": "udagram-hari",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
